experiment/templates/scaleway-csi_template.yaml
---
# Source: scaleway-csi/templates/controller/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaleway-csi-snapshot-validation
  labels:
    helm.sh/chart: scaleway-csi-0.2.0
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: scaleway-csi
    app.kubernetes.io/version: "v0.3.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: scaleway-csi
    app: scaleway-csi-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
# Source: scaleway-csi/templates/node/daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: scaleway-csi-node
  labels:
    helm.sh/chart: scaleway-csi-0.2.0
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: scaleway-csi
    app.kubernetes.io/version: "v0.3.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: scaleway-csi
      app.kubernetes.io/instance: scaleway-csi
      app: scaleway-csi-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scaleway-csi
        app.kubernetes.io/instance: scaleway-csi
        app: scaleway-csi-node
    spec:
      securityContext:
        {}
      serviceAccount: scaleway-csi
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-node-critical
      containers:
        - name: scaleway-csi-plugin
          image: "scaleway/scaleway-csi:v0.3.2"
          imagePullPolicy: IfNotPresent
          args :
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--v=4"
            - "--mode=node"
          securityContext:
            privileged: true
          resources:
            {}
          ports:
            - name: healthz
              containerPort: 9808
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 2
            failureThreshold: 5
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: device-dir
              mountPath: /dev
        - name: csi-node-driver-registrar
          image: "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.11.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=2"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--kubelet-registration-path=$(KUBELET_REGISTRATION_PATH)"
          resources:
            {}
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi/
            - name: registration-dir
              mountPath: /registration/
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.13.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--csi-address=$(CSI_ADDRESS)"
          resources:
            {}
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: DirectoryOrCreate
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi.scaleway.com
            type: DirectoryOrCreate
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: device-dir
          hostPath:
            path: /dev
---
# Source: scaleway-csi/templates/controller/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: scaleway-csi-controller
  labels:
    helm.sh/chart: scaleway-csi-0.2.0
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: scaleway-csi
    app.kubernetes.io/version: "v0.3.2"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: scaleway-csi
      app.kubernetes.io/instance: scaleway-csi
      app: scaleway-csi-controller
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/webhook-secret: dde3d86de3e9990a52ac6923fb63758d44f0cdbed3a307b26c13609c2df42fbb
      labels:
        app.kubernetes.io/name: scaleway-csi
        app.kubernetes.io/instance: scaleway-csi
        app: scaleway-csi-controller
    spec:
      securityContext:
        {}
      priorityClassName: system-cluster-critical
      serviceAccount: scaleway-csi
      containers:
        - name: scaleway-csi-plugin
          image: "scaleway/scaleway-csi:v0.3.2"
          imagePullPolicy: IfNotPresent
          args :
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--mode=controller"
            - "--v=4"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
          resources:
            {}
          ports:
            - name: healthz
              containerPort: 9808
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 2
            failureThreshold: 5
        - name: csi-provisioner
          image: "registry.k8s.io/sig-storage/csi-provisioner:v5.0.2"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
            - "--feature-gates=Topology=true"
            - "--default-fstype=ext4"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-attacher
          image: "registry.k8s.io/sig-storage/csi-attacher:v4.6.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-snapshotter
          image: "registry.k8s.io/sig-storage/csi-snapshotter:v8.0.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: snapshot-controller
          image: "registry.k8s.io/sig-storage/snapshot-controller:v8.0.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--leader-election"
          resources:
            {}
        - name: csi-resizer
          image: "registry.k8s.io/sig-storage/csi-resizer:v1.11.2"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.13.1"
          imagePullPolicy: IfNotPresent
          args:
            - "--csi-address=$(CSI_ADDRESS)"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: snapshot-validation
          image: "registry.k8s.io/sig-storage/snapshot-validation-webhook:v8.0.1"
          imagePullPolicy: IfNotPresent
          args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/tls.crt', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/tls.key']
          ports:
          - containerPort: 443
          resources:
            {}
          volumeMounts:
            - name: snapshot-validation-webhook-certs
              mountPath: /etc/snapshot-validation-webhook/certs
              readOnly: true
      volumes:
        - name: socket-dir
          emptyDir: {}
        - name: snapshot-validation-webhook-certs
          secret:
            secretName: scaleway-csi-webhook
---
# Source: scaleway-csi/templates/controller/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validation-webhook.snapshot.storage.k8s.io"
webhooks:
- name: "validation-webhook.snapshot.storage.k8s.io"
  rules:
  - apiGroups:   ["snapshot.storage.k8s.io"]
    apiVersions: ["v1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["volumesnapshotclasses"]
    scope:       "*"
  clientConfig:
    service:
      namespace: default
      name: scaleway-csi-snapshot-validation
      path: "/volumesnapshot"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lSQUxtazJNTzFvRWlDTnp3clRyczJLekl3RFFZSktvWklodmNOQVFFTEJRQXcKSWpFZ01CNEdBMVVFQXhNWGMyTmhiR1YzWVhrdFkzTnBMWGRsWW1odmIyc3RZMkV3SGhjTk1qVXdNekk1TVRZeApOVEEzV2hjTk1qWXdNekk1TVRZeE5UQTNXakFpTVNBd0hnWURWUVFERXhkelkyRnNaWGRoZVMxamMya3RkMlZpCmFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSzJOdFRoZ2ZoamoKU3VwWFhEcFRyV1hwNS9yaG0zUzZpRVl5YW9rdHJ6NUw1cHNDR3pyRjIxZCsyVEhwbENmbnRtdEpzL3lyRUVIbwpEWUNNR2VpTDhac [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  timeoutSeconds: 2
---
# Source: scaleway-csi/templates/controller/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validation-webhook.groupsnapshot.storage.k8s.io"
webhooks:
- name: "validation-webhook.groupsnapshot.storage.k8s.io"
  rules:
  - apiGroups:   ["groupsnapshot.storage.k8s.io"]
    apiVersions: ["v1alpha1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["volumegroupsnapshotclasses"]
    scope:       "*"
  clientConfig:
    service:
      namespace: default
      name: scaleway-csi-snapshot-validation
      path: "/volumegroupsnapshot"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lSQUxtazJNTzFvRWlDTnp3clRyczJLekl3RFFZSktvWklodmNOQVFFTEJRQXcKSWpFZ01CNEdBMVVFQXhNWGMyTmhiR1YzWVhrdFkzTnBMWGRsWW1odmIyc3RZMkV3SGhjTk1qVXdNekk1TVRZeApOVEEzV2hjTk1qWXdNekk1TVRZeE5UQTNXakFpTVNBd0hnWURWUVFERXhkelkyRnNaWGRoZVMxamMya3RkMlZpCmFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSzJOdFRoZ2ZoamoKU3VwWFhEcFRyV1hwNS9yaG0zUzZpRVl5YW9rdHJ6NUw1cHNDR3pyRjIxZCsyVEhwbENmbnRtdEpzL3lyRUVIbwpEWUNNR2VpTDhac [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  timeoutSeconds: 2
